add additional context feature
